# cat2text-rs

./: Cargo.toml  README.md
src/: anybase.rs  base4.rs  bytes.rs  cli.rs  core.rs  lib.rs  main.rs  tests.rs
