[package]
name = "cat2text"
version = "1.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A port of Cat2Text to Rust, with extra functionality, better documentation, and support for using it as a library as well."
readme = "README.md"
repository = "https://github.com/askiiart/cat2text-rs"
authors = ["askiiart <mail@askiiart.net>"]
categories = ["encoding"]
keywords = ["base4", "meow", "base16"]

[profile.release]
opt-level = 3

[lib]
name = "cat2text"
path = "src/lib.rs"

[[bin]]
name = "cat2text"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive", "cargo"] }
clap_complete = "4.5.44"
